# ogs

./: README.md  generate
01.EmptyScreen/: README.md
01.EmptyScreen/ogs-desktop/: CMakeLists.txt  Variants.txt  ogs.cpp  ogs.h
01.EmptyScreen/ogs-web/: CMakeLists.txt  OpenSceneGraph-04.cpp  Variants.txt  ogs.cpp  ogs.h
01.EmptyScreen/templates/: CMakeLists.txt  OpenSceneGraph-01.cpp  ogs.cpp  ogs.h
01.EmptyScreen/variants/: MAIN_APPLICATION_LOG.cpp  build-web.cmake  build.01.EmptyScreen.cmake  build.OpenSceneGraph-desktop.cmake  build.OpenSceneGraph-web.cmake  build.OpenSceneGraph.cmake  build.base.cmake  format.printfString.cpp  lib.OpenSceneGraph.OpenThreads.cpp  lib.OpenSceneGraph.osg.BillboardFake.cpp  lib.OpenSceneGraph.osg.cpp  lib.OpenSceneGraph.osgDB.cpp  lib.OpenSceneGraph.osgGA.cpp  lib.OpenSceneGraph.osgUtil.cpp  lib.OpenSceneGraph.osgViewer-desktop.cpp  lib.OpenSceneGraph.osgViewer.cpp  log.log-default.cpp  log.logprintf.cpp  main.Application+frame.cpp  main.Application+run.cpp  main.Application+setupWindow-desktop.cpp  main.Application+setupWindow-embedded.cpp  main.Application+setupWindow-web.cpp  main.Application.Rendering.cpp  main.Application.cpp  main.Example.01.EmptyScreen.cpp  main.Example.cpp  main.main-desktop.cpp  main.main-web.cpp  render.createGraphicsContext-desktop.cpp  render.setupCamera.cpp
02.Lua/ogs-desktop/: CMakeLists.txt  Variants.txt  ogs.h
02.Lua/ogs-web/: CMakeLists.txt  OpenSceneGraph-02.cpp  OpenSceneGraph-03.cpp  Variants.txt  ogs.h
02.Lua/templates/: CMakeLists.txt  OpenSceneGraph-03.cpp  ogs.cpp  ogs.h
02.Lua/variants/: MAIN_EXAMPLE_LOG.cpp  build.02.Lua.cmake  build.lua-web.cmake  build.lua.cmake  format.base64Decode.cpp  format.base64Encode.cpp  format.commandLineArgumentsToParameters.cpp  format.splitString.cpp  format.stringStartsWith.cpp  format.urlToParameters.cpp  lib.base64.cpp  lib.lua.cpp  main.Application.Lua.cpp  main.Example.02.Lua.cpp  main.Example.Base64Script.cpp  main.main.Arguments-desktop.cpp  main.main.Arguments-web.cpp
03.Script/ogs-desktop/: CMakeLists.txt  OpenSceneGraph-04.mm  Variants.txt  ogs.h
03.Script/ogs-web/: CMakeLists.txt  Variants.txt  api.lua  api.lua.h  ogs.cpp  ogs.h
03.Script/templates/: CMakeLists.txt  OpenSceneGraph-04.mm  api.lua  ogs.h
03.Script/variants/: API.core.PropertiesMetatable.lua  API.main.application.camera.clearColor.lua  API.main.application.camera.lua  SCRIPT_ENVIRONMENT_CLIENT_CALL.cpp  SCRIPT_ENVIRONMENT_LOG.cpp  build.03.Script.cmake  format.stringsToString.cpp  generate.api.sh  main.Application+camera.cpp  main.Application.Scripting.cpp  main.Example.03.Script.cpp  main.Example.API.application.camera.clearColor.cpp  main.Example.EmbeddedAPIScript.cpp  resource.Resource.cpp  script.Environment.cpp  script.EnvironmentClient.cpp
04.Mouse/ogs-desktop/: CMakeLists.txt  OpenSceneGraph-01.cpp  OpenSceneGraph-04.cpp  Variants.txt  api.lua  api.lua.h  ogs.h
04.Mouse/ogs-web/: CMakeLists.txt  Variants.txt  ogs.h
04.Mouse/templates/: CMakeLists.txt  api.lua  generate  ogs.h
04.Mouse/variants/: build.04.Mouse.cmake  core.Reporter.cpp  input.Mouse.cpp  input.MouseButtons.cpp  main.Application+handleEvent-web.cpp  main.Application.Mouse.cpp  main.Example.04.Mouse.cpp  main.Example.API.application.mouse.cpp  main.main.Input-web.cpp
05.Sphere/ogs-desktop/: CMakeLists.txt  Variants.txt  api.lua  api.lua.h  ogs.h
05.Sphere/ogs-web/: CMakeLists.txt  Variants.txt  api.lua  api.lua.h  ogs.h
05.Sphere/templates/: CMakeLists.txt  api.lua  lua.c  ogs.h
05.Sphere/variants/: API.main.application.nodes.createNode.lua  API.main.application.nodes.createSphere.lua  API.main.application.nodes.node.lua  API.scene.Node.addChild.lua  API.scene.Node.lua  build.05.Sphere.cmake  main.Application.Nodes.cpp  main.Example.05.Sphere.cpp  main.Example.API.application.nodes.createSphere.cpp  main.Example.API.application.nodes.node.addChild.cpp  main.Example.API.application.nodes.node.exists.cpp  main.Example.LogTitle.cpp  main.Example.WhiteNodes.cpp  main.Nodes+createSphere.cpp  main.Nodes+node.cpp  main.Nodes.Root.cpp  main.Nodes.VBO.cpp  main.Nodes.cpp  render.VBOSetupVisitor.cpp  render.createShaderProgram.cpp  scene.createShape.cpp  scene.createSphere.cpp
06.Selection/ogs-desktop/: CMakeLists.txt  Variants.txt  api.lua.h  ogs.h
06.Selection/ogs-web/: CMakeLists.txt  Variants.txt  api.lua  ogs.h
06.Selection/templates/: CMakeLists.txt  api.lua  ogs.h
06.Selection/variants/: API.main.application.camera.nodeAtPosition.lua  API.scene.Node.setMask.lua  build.06.Selection.cmake  main.Example.06.Selection.cpp  main.Example.API.application.camera.nodeAtPosition.cpp  main.Example.API.application.nodes.node.setMask.cpp  scene.nodeAtPosition.cpp  script.Environment.SafeCall.cpp
07.Orientation/ogs-desktop/: CMakeLists.txt  Variants.txt  api.lua.h  generate  ogs.h
07.Orientation/ogs-web/: CMakeLists.txt  Variants.txt  api.lua  ogs.cpp  ogs.h
07.Orientation/templates/: CMakeLists.txt  OpenSceneGraph-04.cpp  api.lua  ogs.cpp  ogs.h
07.Orientation/variants/: API.scene.Node.position.lua  API.scene.Node.rotation.lua  build.07.Orientation.cmake  main.Application.CameraManipulator.cpp  main.Example.07.Orientation.cpp  main.Example.API.application.camera.position.cpp  main.Example.API.application.camera.rotation.cpp  main.Example.API.application.nodes.node.position.cpp  main.Example.API.application.nodes.node.rotation.cpp  scene.degreesToQuaternion.cpp  scene.quaternionToDegrees.cpp  scene.simplePosition.cpp  scene.simpleRotation.cpp
08.Material/ogs-desktop/: CMakeLists.txt  Variants.txt  api.lua  ogs.cpp  ogs.h
08.Material/ogs-web/: CMakeLists.txt  Variants.txt  api.lua.h  ogs.h
08.Material/templates/: CMakeLists.txt  OpenSceneGraph-02.cpp  api.lua  ogs.h
08.Material/variants/: API.main.application.materials.createMaterial.lua  API.render.Material.lua  API.render.Material.setShaders.lua  API.render.Material.setUniform.lua  API.scene.Node.setMaterial.lua  build.08.Material.cmake  main.Application.Materials.cpp  main.Example.08.Material.cpp  (+7 more)
tools/: emscripten-fullpage
